--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,4 @@
 name: Nick Carter's Personal Website
 description: A simple website for CIS 641
 markdown: kramdown
-remote_theme: pages-themes/hacker@v0.2.0
-plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
+theme: pages-themes/hacker@v0.2.0
